packages/jsii/test/negatives/neg.double-interface-members-method.ts
export interface IA {
  foo(): void;
}
export interface IB extends IA {
  foo(): void;
}
